# stable-baselines3

./: .codespell_words  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Assignment_4.ipynb  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  example.py  multi_input_tests.py  pandulum.py  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py  temp.py  traiding.py  traiding2_surrogate.py  traiding_surrogate.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  custom_env.md  custom_env.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  issue-template.md  question.md  question.yml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: Makefile  README.md  conda_env.yml  conf.py  index.rst  make.bat  requirements.txt  spelling_wordlist.txt
docs/common/: atari_wrappers.md  atari_wrappers.rst  cmd_util.rst  cmd_utils.rst  distributions.md  distributions.rst  env_checker.md  env_checker.rst  env_util.md  env_util.rst  envs.md  envs.rst  evaluation.md  evaluation.rst  logger.md  logger.rst  monitor.md  monitor.rst  noise.md  noise.rst  utils.md  utils.rst
docs/guide/: algos.md  algos.rst  callbacks.md  callbacks.rst  checking_nan.md  checking_nan.rst  custom_env.md  custom_env.rst  custom_policy.md  custom_policy.rst  developer.md  developer.rst  examples.md  examples.rst  export.md  export.rst  imitation.md  imitation.rst  install.md  install.rst  integrations.md  integrations.rst  migration.md  migration.rst  plotting.md  plotting.rst  quickstart.md  quickstart.rst  rl.md  rl.rst  rl_tips.md  rl_tips.rst  rl_zoo.md  rl_zoo.rst  save_format.md  save_format.rst  sb3_contrib.md  sb3_contrib.rst  sbx.md  sbx.rst  (+4 more)
docs/misc/: changelog.md  changelog.rst  projects.md  projects.rst
docs/modules/: a2c.md  a2c.rst  base.md  base.rst  cem_rl.rst  ddpg.md  ddpg.rst  dqn.md  dqn.rst  her.md  her.rst  ppo.md  ppo.rst  sac.md  sac.rst  td3.md  td3.rst
examples/: ppo_breakout_cnn.py
frozenlakeplus/: README.md  eval_agent.py  frozenlake_plus_env.py  test_frozenlake_plus.py  train_agent.py
notebooks/: exploring_sb3_ppo_1.ipynb  inserting_hypernet_1.ipynb  inserting_hypernet_2.ipynb  inserting_hypernet_3.ipynb  inserting_hypernet_4_adding_training.ipynb
other/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
runs/Jan07_19-24-24_surabhi-Vostro-3559_sac-popsan-Walker2d-v3-encoder-dim-10-decoder-dim-10_0/: events.out.tfevents.1673099664.surabhi-Vostro-3559.3650.0
scripts/: build_docker.sh  run_docker_cpu.sh  run_docker_gpu.sh  run_tests.sh  run_tests_travis.sh
stable_baselines3/: __init__.py  version.txt
stable_baselines3/a2c/: __init__.py  a2c.py  policies.py
stable_baselines3/cmaes/: __init__.py  cmaes.py  policies.py
stable_baselines3/common/: __init__.py  atari_wrappers.py  base_class.py  bit_flipping_env.py  buffers.py  callbacks.py  cmd_util.py  distributions.py  env_checker.py  env_util.py  evaluation.py  graph_layers.py  identity_env.py  logger.py  monitor.py  multi_input_envs.py  noise.py  off_policy_algorithm.py  on_policy_algorithm.py  policies.py  preprocessing.py  prioritized_replay_buffer.py  results_plotter.py  running_mean_std.py  save_util.py  stacked_observations.py  surgeon.py  torch_layers.py  type_aliases.py  utils.py  vec_env_checker.py
stable_baselines3/ddpg/: __init__.py  ddpg.py  policies.py
stable_baselines3/dqn/: __init__.py  dqn.py  policies.py  prioritized_replay_buffer.py
stable_baselines3/gdb/: gdb.py  policies.py
stable_baselines3/her/: __init__.py  goal_selection_strategy.py  her.py  her_replay_buffer.py  obs_wrapper.py  replay_buffer.py  utils.py
stable_baselines3/lppo/: __init__.py  lppo.py  policies.py
stable_baselines3/ppo/: __init__.py  policies.py  ppo.py
stable_baselines3/ppo_sg/: ppo.py
stable_baselines3/qc_sane/: README.md  __init__.py  core_cuda.py  popsan.py  qc_sane.py  replay_buffer_norm.py
stable_baselines3/rime/: __init__.py  buffers.py  policies.py  rime_ppo.py  utils.py  wrappers.py
stable_baselines3/rsppo/: __init__.py  policies.py  rsppo.py
stable_baselines3/sac/: __init__.py  policies.py  sac.py
stable_baselines3/settings/: __init__.py  config.py
stable_baselines3/sgb/: __init__.py  policies.py  sgb.py
stable_baselines3/td3/: __init__.py  policies.py  td3.py
stable_baselines3/tqc/: __init__.py  policies.py  tqc.py
tensorboard_log/A2C_13/: events.out.tfevents.1636311989.2dbee78475ed.79.2
tensorboard_log/A2C_14/: events.out.tfevents.1636325080.61b356882539.80.0
tensorboard_log/A2C_15/: events.out.tfevents.1636395908.0e32f7e8332e.89.0
tensorboard_log/A2C_16/: events.out.tfevents.1636397615.2410bf5e67c2.89.0
tensorboard_log/A2C_17/: events.out.tfevents.1636397734.2410bf5e67c2.89.1
tensorboard_log/A2C_18/: events.out.tfevents.1636397779.2410bf5e67c2.89.2
tensorboard_log/A2C_19/: events.out.tfevents.1636397833.2410bf5e67c2.89.3
tensorboard_log/A2C_20/: events.out.tfevents.1636397881.2410bf5e67c2.89.4
tensorboard_log/A2C_21/: events.out.tfevents.1636397958.2410bf5e67c2.89.5
tests/: test_HER.py  test_actor_critic_cnn_policy.py  test_buffer_dtypes.py  test_buffer_optimization.py  test_buffers.py  test_callbacks.py  test_cnn.py  test_custom_policy.py  test_deterministic.py  test_dict_env.py  test_distributions.py  test_env_checker.py  test_env_graph.py  test_envs.py  test_gae.py  test_her.py  test_identity.py  test_logger.py  test_lppo.py  test_monitor.py  test_n_step_replay.py  test_ppo.py  test_ppo_different_optimizers.py  test_predict.py  test_preprocessing.py  test_qc_sane.py  test_run.py  test_save_load.py  test_sde.py  test_spaces.py  test_td3.py  test_tensorboard.py  test_torch_compile.py  test_train_eval_mode.py  test_type_aliases.py  test_utils.py  test_utils_seed.py  test_vec_check_nan.py  test_vec_env_checker.py  test_vec_envs.py  (+6 more)
torchy_baselines/: __init__.py  version.txt
torchy_baselines/a2c/: __init__.py  a2c.py
videos/: a2c-cartpole-step-0-to-step-500.meta.json
(+125 files in other folders)
