[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[tool:pytest]
# Deterministic ordering for tests; useful for pytest-xdist.
env =
	PYTHONHASHSEED=0
filterwarnings =
		# Gym warnings
		ignore:Parameters to load are deprecated.:DeprecationWarning
		ignore:the imp module is deprecated in favour of importlib:PendingDeprecationWarning
