[metadata]
# This includes the license file in the wheel.
license_files = LICENSE
project_urls =
    Code = https://github.com/DLR-RM/stable-baselines3
    Documentation = https://stable-baselines3.readthedocs.io/

[tool:pytest]
# Deterministic ordering for tests; useful for pytest-xdist.
env =
	PYTHONHASHSEED=0
filterwarnings =
		# Tensorboard warnings
		ignore::DeprecationWarning:tensorboard
		# Gym warnings
		ignore:Parameters to load are deprecated.:DeprecationWarning
		ignore:the imp module is deprecated in favour of importlib:PendingDeprecationWarning
		ignore::UserWarning:gym
		ignore:SelectableGroups dict interface is deprecated.:DeprecationWarning
		ignore:`np.bool` is a deprecated alias for the builtin `bool`:DeprecationWarning
markers =
    expensive: marks tests as expensive (deselect with '-m "not expensive"')

[pytype]
inputs = stable_baselines3
disable = pyi-error

[mypy]
ignore_missing_imports = True
follow_imports = silent
show_error_codes = True
exclude = (?x)(
    stable_baselines3/a2c/a2c.py$
    | stable_baselines3/common/atari_wrappers.py$
    | stable_baselines3/common/base_class.py$
    | stable_baselines3/common/buffers.py$
    | stable_baselines3/common/callbacks.py$
    | stable_baselines3/common/distributions.py$
    | stable_baselines3/common/env_util.py$
    | stable_baselines3/common/envs/bit_flipping_env.py$
    | stable_baselines3/common/envs/identity_env.py$
    | stable_baselines3/common/envs/multi_input_envs.py$
    | stable_baselines3/common/logger.py$
    | stable_baselines3/common/monitor.py$
    | stable_baselines3/common/off_policy_algorithm.py$
    | stable_baselines3/common/on_policy_algorithm.py$
    | stable_baselines3/common/policies.py$
    | stable_baselines3/common/preprocessing.py$
    | stable_baselines3/common/save_util.py$
    | stable_baselines3/common/sb2_compat/rmsprop_tf_like.py$
    | stable_baselines3/common/torch_layers.py$
    | stable_baselines3/common/type_aliases.py$
    | stable_baselines3/common/utils.py$
    | stable_baselines3/common/vec_env/__init__.py$
    | stable_baselines3/common/vec_env/base_vec_env.py$
    | stable_baselines3/common/vec_env/dummy_vec_env.py$
    | stable_baselines3/common/vec_env/stacked_observations.py$
    | stable_baselines3/common/vec_env/subproc_vec_env.py$
    | stable_baselines3/common/vec_env/util.py$
    | stable_baselines3/common/vec_env/vec_check_nan.py$
    | stable_baselines3/common/vec_env/vec_extract_dict_obs.py$
    | stable_baselines3/common/vec_env/vec_frame_stack.py$
    | stable_baselines3/common/vec_env/vec_monitor.py$
    | stable_baselines3/common/vec_env/vec_normalize.py$
    | stable_baselines3/common/vec_env/vec_transpose.py$
    | stable_baselines3/common/vec_env/vec_video_recorder.py$
    | stable_baselines3/dqn/dqn.py$
    | stable_baselines3/dqn/policies.py$
    | stable_baselines3/her/her_replay_buffer.py$
    | stable_baselines3/ppo/ppo.py$
    | stable_baselines3/sac/policies.py$
    | stable_baselines3/sac/sac.py$
    | stable_baselines3/td3/policies.py$
    | stable_baselines3/td3/td3.py$
    | tests/test_distributions.py$
    | tests/test_logger.py$
    | tests/test_tensorboard.py$
    | tests/test_train_eval_mode.py$
    | tests/test_vec_normalize.py$
  )

[flake8]
ignore = W503,W504,E203,E231  # line breaks before and after binary operators
# Ignore import not used when aliases are defined
per-file-ignores =
	./stable_baselines3/__init__.py:F401
	./stable_baselines3/common/__init__.py:F401
	./stable_baselines3/common/envs/__init__.py:F401
	./stable_baselines3/a2c/__init__.py:F401
	./stable_baselines3/ddpg/__init__.py:F401
	./stable_baselines3/dqn/__init__.py:F401
	./stable_baselines3/her/__init__.py:F401
	./stable_baselines3/ppo/__init__.py:F401
	./stable_baselines3/sac/__init__.py:F401
	./stable_baselines3/td3/__init__.py:F401
	./stable_baselines3/common/vec_env/__init__.py:F401
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # Don't check the doc
    docs/
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
		*.egg-info
max-complexity = 15
# The GitHub editor is 127 chars wide
max-line-length = 127

[isort]
profile = black
line_length = 127
src_paths = stable_baselines3
